Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-7819

GET_MODULE_HANDLE_EX_FLAG_PIN is broken

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • None
    • RosDlls

    Description

      Revision 61844 disables call on GeModuleHandleEx(GET_MODULE_HANDLE_EX_FLAG_PIN) because otherwise the loader enter in an endless recursive loop here (line 425): http://code.reactos.org/browse/CORE/dll/ntdll/ldr/ldrutils.c?r=61728#to425

      The attached patch works for me. Aleksey, please review

      Attachments

        Activity

          People

            fireball fireball
            zefklop jgardou
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: