[NTDLL/LDR]  - Mark module entries as "load in progress" when pinning them. CORE-7819 #comment Committed, as a lot of applications rely on this. Feel free to revert if you feel the change is not correct.

svn path=/trunk/; revision=64237